# r3-UI

./: .env  .gitignore  Cargo.toml  README.md  data.db
src/: app_state.rs  lib.rs  main.rs
src/bot/: backup.rs  commands.rs  handler.rs  mod.rs  notify.rs
src/config/: settings.rs
src/db/: mod.rs  pool.rs
src/handlers/: auth.rs  inbound.rs  mod.rs  pages.rs  server.rs  setting.rs  subscription.rs  xray.rs
src/middleware/: auth.rs  session.rs
src/models/: client.rs  inbound.rs  mod.rs  setting.rs  traffic.rs  user.rs
src/scheduler/: jobs.rs
src/services/: auth.rs  i18n.rs  ldap.rs  mod.rs  subscription.rs  system.rs  template.rs  totp.rs  traffic.rs  xray.rs
src/utils/: crypto.rs  mod.rs  response.rs
src/websocket/: handler.rs  hub.rs  mod.rs
src/xray/: api.rs  config.rs  mod.rs  process.rs  traffic.rs
web/html/: base.html  index.html  login.html
