[package]
name = "r3_ui"
version = "0.1.0"
edition = "2021"
description = "3x-ui Rust rewrite - Xray proxy panel"
authors = ["r3-ui"]

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 会话
tower-sessions = "0.14"

# WebSocket
axum-extra = { version = "0.10", features = ["typed-header"] }

# 定时任务
tokio-cron-scheduler = "0.14"

# 嵌入资源
rust-embed = "8"

# 模板引擎
tera = "1"
lazy_static = "1.5"

# TOML 解析 (i18n)
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置
dotenvy = "0.15"

# 加密
argon2 = "0.5"
rand = "0.8"

# 错误处理
anyhow = "1"
thiserror = "2"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 异步工具
futures = "0.3"
async-trait = "0.1"

# 并发集合
dashmap = "6"

# Base64 编码
base64 = "0.22"

# 时间库 (用于 tower-sessions)
time = "0.3"

# MIME 类型
mime_guess = "2"

# Telegram Bot
teloxide = { version = "0.13", features = ["macros"] }

# 2FA 认证
totp-lite = "2"
qrcode = "0.14"
image = "0.25"

# 系统监控
sysinfo = "0.33"

# LDAP
ldap3 = "0.11"

# HTTP客户端 (用于下载Xray)
reqwest = { version = "0.12", features = ["json", "stream"] }

# 压缩
zip = "2"

# 异步同步原语
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# 正则表达式
regex = "1"

# URL 编码
urlencoding = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
